; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_metadataquery.c_map_shortname_to_schema.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_metadataquery.c_map_shortname_to_schema.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32 }

@GUID_MetadataFormatXMP = common dso_local global i32 0, align 4
@GUID_MetadataFormatXMPStruct = common dso_local global i32 0, align 4
@name2schema = common dso_local global %struct.TYPE_3__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @map_shortname_to_schema to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @map_shortname_to_schema(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @IsEqualGUID(i32* %7, i32* @GUID_MetadataFormatXMP)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @IsEqualGUID(i32* %11, i32* @GUID_MetadataFormatXMPStruct)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10
  store i32* null, i32** %3, align 8
  br label %41

15:                                               ; preds = %10, %2
  store i64 0, i64* %6, align 8
  br label %16

16:                                               ; preds = %37, %15
  %17 = load i64, i64* %6, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** @name2schema, align 8
  %19 = call i64 @ARRAY_SIZE(%struct.TYPE_3__* %18)
  %20 = icmp ult i64 %17, %19
  br i1 %20, label %21, label %40

21:                                               ; preds = %16
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** @name2schema, align 8
  %23 = load i64, i64* %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @lstrcmpW(i32 %26, i32* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %36, label %30

30:                                               ; preds = %21
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** @name2schema, align 8
  %32 = load i64, i64* %6, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32*, i32** %34, align 8
  store i32* %35, i32** %3, align 8
  br label %41

36:                                               ; preds = %21
  br label %37

37:                                               ; preds = %36
  %38 = load i64, i64* %6, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %6, align 8
  br label %16

40:                                               ; preds = %16
  store i32* null, i32** %3, align 8
  br label %41

41:                                               ; preds = %40, %30, %14
  %42 = load i32*, i32** %3, align 8
  ret i32* %42
}

declare dso_local i32 @IsEqualGUID(i32*, i32*) #1

declare dso_local i64 @ARRAY_SIZE(%struct.TYPE_3__*) #1

declare dso_local i32 @lstrcmpW(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
